@@ -130,7 +130,7 @@ class TableVectorIndexOptions:
     that enables vector (ANN) search on a column.
 
     Both when creating indexes and retrieving index metadata from the API, instances
-    of TableIndexOptions are used to express the corresponding index settings.
+    of TableVectorIndexOptions are used to express the corresponding index settings.
 
     Attributes:
         metric: the similarity metric used in the index. It must be one of the strings
@@ -174,7 +174,7 @@ class TableVectorIndexOptions:
     @classmethod
     def _from_dict(cls, raw_dict: dict[str, Any]) -> TableVectorIndexOptions:
         """
-        Create an instance of TableIndexOptions from a dictionary
+        Create an instance of TableVectorIndexOptions from a dictionary
         such as one from the Data API.
         """
 
@@ -199,6 +199,77 @@ class TableVectorIndexOptions:
             return raw_input
         elif raw_input is None:
             return cls(metric=_UNSET, source_model=_UNSET)
+        else:
+            return cls._from_dict(raw_input)
+
+
+@dataclass
+class TableTextIndexOptions:
+    """
+    An object describing the options for a table text index, which is the index
+    that enables lexicographical matching on a text column.
+
+    Both when creating indexes and retrieving index metadata from the API, instances
+    of TableTextIndexOptions are used to express the corresponding index settings.
+
+    Attributes:
+        analyzer: A string describing a built-in analyzer, or a dictionary
+            describing an analyzer configuration in full.
+    """
+
+    analyzer: str | dict[str, Any] | UnsetType = _UNSET
+
+    def __repr__(self) -> str:
+        if isinstance(self.analyzer, UnsetType):
+            return f"{self.__class__.__name__}()"
+        else:
+            analyzer_desc = (
+                self.analyzer
+                if isinstance(self.analyzer, str)
+                else f"{str(self.analyzer)[:25]}..."
+            )
+            return f'{self.__class__.__name__}(analyzer_desc="{analyzer_desc}")'
+
+    def as_dict(self) -> dict[str, Any]:
+        """Recast this object into a dictionary."""
+
+        return {
+            k: v
+            for k, v in {
+                "analyzer": None
+                if isinstance(self.analyzer, UnsetType)
+                else self.analyzer,
+            }.items()
+            if v is not None
+        }
+
+    @classmethod
+    def _from_dict(cls, raw_dict: dict[str, Any]) -> TableTextIndexOptions:
+        """
+        Create an instance of TableTextIndexOptions from a dictionary
+        such as one from the Data API.
+        """
+
+        _warn_residual_keys(cls, raw_dict, {"analyzer"})
+        return TableTextIndexOptions(
+            analyzer=raw_dict["analyzer"]
+            if raw_dict.get("analyzer") is not None
+            else _UNSET,
+        )
+
+    @classmethod
+    def coerce(
+        cls, raw_input: TableTextIndexOptions | dict[str, Any] | None
+    ) -> TableTextIndexOptions:
+        """
+        Normalize the input, whether an object already or a plain dictionary
+        of the right structure, into a TableTextIndexOptions.
+        """
+
+        if isinstance(raw_input, TableTextIndexOptions):
+            return raw_input
+        elif raw_input is None:
+            return cls(analyzer=_UNSET)
         else:
             return cls._from_dict(raw_input)
 
@@ -241,6 +312,8 @@ class TableBaseIndexDefinition(ABC):
         else:
             if "metric" in raw_input["options"]:
                 return TableVectorIndexDefinition.coerce(raw_input)
+            elif "analyzer" in raw_input["options"]:
+                return TableTextIndexDefinition.coerce(raw_input)
             else:
                 return TableIndexDefinition.coerce(raw_input)
 
@@ -362,7 +435,7 @@ class TableVectorIndexDefinition(TableBaseIndexDefinition):
         raw_dict: dict[str, Any],
     ) -> TableVectorIndexDefinition:
         """
-        Create an instance of TableIndexDefinition from a dictionary
+        Create an instance of TableVectorIndexDefinition from a dictionary
         such as one from the Data API.
         """
 
@@ -383,6 +456,77 @@ class TableVectorIndexDefinition(TableBaseIndexDefinition):
         """
 
         if isinstance(raw_input, TableVectorIndexDefinition):
+            return raw_input
+        else:
+            _filled_raw_input = {**{"options": {}}, **raw_input}
+            return cls._from_dict(_filled_raw_input)
+
+
+@dataclass
+class TableTextIndexDefinition(TableBaseIndexDefinition):
+    """
+    An object describing a text index definition,
+    including the name of the indexed column and the index options.
+
+    Attributes:
+        column: the name of the indexed column.
+        options: a `TableTextIndexOptions` detailing the index configuration.
+    """
+
+    column: str
+    options: TableTextIndexOptions
+
+    def __init__(
+        self,
+        column: str,
+        options: TableTextIndexOptions,
+    ) -> None:
+        self._index_type = TableIndexType.TEXT
+        self.column = column
+        self.options = options
+
+    def __repr__(self) -> str:
+        return f"{self.__class__.__name__}({self.column}, options={self.options})"
+
+    def as_dict(self) -> dict[str, Any]:
+        """Recast this object into a dictionary."""
+
+        return {
+            k: v
+            for k, v in {
+                "column": self.column,
+                "options": self.options.as_dict(),
+            }.items()
+            if v
+        }
+
+    @classmethod
+    def _from_dict(
+        cls,
+        raw_dict: dict[str, Any],
+    ) -> TableTextIndexDefinition:
+        """
+        Create an instance of TableTextIndexDefinition from a dictionary
+        such as one from the Data API.
+        """
+
+        _warn_residual_keys(cls, raw_dict, {"column", "options"})
+        return TableTextIndexDefinition(
+            column=raw_dict["column"],
+            options=TableTextIndexOptions.coerce(raw_dict.get("options") or {}),
+        )
+
+    @classmethod
+    def coerce(
+        cls,
+        raw_input: TableTextIndexDefinition | dict[str, Any],
+    ) -> TableTextIndexDefinition:
+        """
+        Normalize the input, whether an object already or a plain dictionary
+        of the right structure, into a TableVectorIndexDefinition.
+        """
+
+        if isinstance(raw_input, TableTextIndexDefinition):
             return raw_input
         else:
             _filled_raw_input = {**{"options": {}}, **raw_input}
@@ -593,6 +737,8 @@ class TableIndexDescriptor:
                 index_definition = TableIndexDefinition._from_dict(idx_def)
             elif idx_type == TableIndexType.VECTOR.value:
                 index_definition = TableVectorIndexDefinition._from_dict(idx_def)
+            elif idx_type == TableIndexType.TEXT.value:
+                index_definition = TableTextIndexDefinition._from_dict(idx_def)
             elif idx_type == TableIndexType.UNKNOWN.value:
                 index_definition = TableUnsupportedIndexDefinition._from_dict(idx_def)
             else:
