@@ -64,6 +64,8 @@ from astrapy.data.info.table_descriptor.table_indexes import (
     TableIndexDescriptor,
     TableIndexOptions,
     TableIndexType,
+    TableTextIndexDefinition,
+    TableTextIndexOptions,
     TableUnsupportedIndexDefinition,
     TableVectorIndexDefinition,
     TableVectorIndexOptions,
@@ -137,6 +139,8 @@ __all__ = [
     "TablePrimaryKeyDescriptor",
     "TableScalarColumnTypeDescriptor",
     "TableUnsupportedColumnTypeDescriptor",
+    "TableTextIndexDefinition",
+    "TableTextIndexOptions",
     "TableUnsupportedIndexDefinition",
     "TableValuedColumnType",
     "TableValuedColumnTypeDescriptor",
